--- a/Drawer/package.json
+++ b/Drawer/package.json
@@ -10,14 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.22",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.0.1",
+    "react-navigation-stack": "^2.0.2",
     "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
